# depthai-core

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  =12  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt_cPlusPlus_backup  CMakeLists.txt_ros_backup  CMakePresets.json  Changelog  NodeGroup.md  PipelineDebugging.md  README.md  V2V3PortinGuide.md  compile_commands.json  default.nix  less  package.xml  portfile.cmake  recording.mcap  vcpkg-configuration.json  vcpkg.json
bindings/js/: .babelrc.js  CMakeLists.txt  README.md  bindings.cpp  build.sh  configure.sh  package-lock.json  package.json  rollup.config.js  tsconfig.json
example/: CMakeLists.txt  config.json  config_1.json  main.cpp  main_flash.cpp  main_gaze.cpp
examples/: .gitignore  CMakeLists.txt  README.md  calib_data.json  calib_data2.json  calib_data2_return_back.json  calib_data_v5.json  calib_data_v52.json  calib_data_v53.json  check_transformations.py  flash_example.cpp  generate_porting_guide.py  main.cpp  main_device_test.cpp  new_read_data_points.py  new_save_aruco.py  new_save_data_points.py  quick_aruco_test.py  read_aruco_data_points.py  read_data_points.py  replay_comparison.py  save_data_points.py  save_single_frame.py  temp_aruco.py  testTransformations.py  test_alignment.py  test_individual_save.py  test_singestream.py  test_undistortion.py
examples/Aljaz_zi_P/: Bosch_investigation.py
examples/AprilTag/: apriltag.cpp  apriltag_rgb.cpp
examples/AutoPipeline/: detection_2x.cpp
examples/Camera/: camera.cpp  camera_multiple_outputs.cpp  thermal_cam.cpp
examples/Cast/: blur.cpp  cast_blur.cpp  cast_diff.cpp  concat.cpp  diff.cpp
examples/ColorCamera/: mp4v2_writer_h264.cpp  mp4v2_writer_mjpeg.cpp  newCameraMatrixTest.cpp  rgb_camera_control.cpp  rgb_isp_scale.cpp  rgb_preview.cpp  rgb_video.cpp
examples/CrashReport/: crash_report.cpp
examples/DepthAlign/: rgb_depth_align.cpp
examples/EdgeDetector/: edge_detector.cpp
examples/FeatureTracker/: feature_detector.cpp  feature_tracker.cpp
examples/IMU/: imu_extrinsics.cpp  imu_firmware_update.cpp  imu_gyroscope_accelerometer.cpp  imu_rotation_vector.cpp
examples/ImageAlign/: depth_align.cpp  image_align.cpp  thermal_align.cpp  tof_align.cpp
examples/ImageManip/: image_manip_cc_test.cpp  image_manip_color_conversion.cpp  image_manip_example.cpp  image_manip_host.cpp  image_manip_many_instances.cpp  image_manip_rotate.cpp  image_manip_tiling.cpp  image_manip_warp_mesh.cpp  rgb_rotate_warp.cpp
examples/MobileNet/: camera_mobilenet_sync_example.cpp  mono_mobilenet.cpp  rgb_mobilenet.cpp  rgb_mobilenet_4k.cpp  video_mobilenet.cpp  webcam_mobilenet_example.cpp
examples/MonoCamera/: mono_camera_control.cpp  mono_full_resolution_saver.cpp  mono_preview.cpp
examples/NNArchive/: nn_archive.cpp
examples/NeuralNetwork/: concat_multi_input.cpp  normalization_multi_input.cpp
examples/ObjectTracker/: object_tracker.cpp  object_tracker_video.cpp  spatial_object_tracker.cpp
examples/PointCloud/: visualize_pointcloud.cpp
examples/Record/: holistic_record.cpp  record_encoded_h264.cpp  record_encoded_mjpeg.cpp  record_imu.cpp  record_raw_color.cpp  record_raw_gray.cpp
examples/Replay/: holistic_replay.cpp  replay_imu.cpp  replay_video.cpp  replay_video_meta.cpp
examples/Script/: script_camera_control.cpp  script_change_pipeline_flow.cpp  script_forward_frames.cpp  script_get_device_info.cpp  script_get_ip.cpp  script_http_client.cpp  script_http_server.cpp  script_json_communication.cpp  script_mjpeg_server.cpp  script_nndata_datatype.cpp  script_nndata_example.cpp  script_read_calibration.cpp
examples/SpatialDetection/: spatial_calculator_multi_roi.cpp  spatial_location_calculator.cpp  spatial_mobilenet.cpp  spatial_mobilenet_mono.cpp  spatial_tiny_yolo.cpp  spatial_tiny_yolo_tof.cpp
examples/StereoDepth/: depth_crop_control.cpp  depth_post_processing.cpp  depth_preview.cpp  rgb_depth_aligned.cpp  rgb_depth_confidence_aligned.cpp  stereo_depth_video.cpp
examples/Sync/: demux_message_group.cpp  depth_video_synced.cpp  imu_video_synced.cpp  sync_scripts.cpp
examples/SystemLogger/: system_information.cpp
examples/Thermal/: thermal.cpp  thermal2.cpp  thermal_nnet.cpp
examples/ToF/: tof_depth.cpp
examples/VSLAM/: basalt_dai_vio.cpp  basalt_dai_vio_slam.cpp  rerun_node.hpp  rtabmap_slam.cpp  rtabmap_vio.cpp  rtabmap_vio_slam.cpp
examples/VideoEncoder/: disparity_encoding.cpp  encoding_max_limit.cpp  mjpeg_encoding_example.cpp  rgb_encoding.cpp  rgb_full_resolution_saver.cpp  rgb_mono_encoding.cpp
examples/Warp/: warp_mesh.cpp
examples/Yolo/: tiny_yolo.cpp  yolov8_nano.cpp
examples/bootloader/: bootloader_config.cpp  bootloader_version.cpp  flash_bl.cpp  flash_boot_header.cpp  flash_bootloader.cpp  flash_user_bootloader.cpp  poe_set_ip.cpp  read_flash_memory.cpp  write_flash_memory.cpp
examples/calibration/: calibration_dump.cpp  calibration_factory_reset.cpp  calibration_flash.cpp  calibration_load.cpp  calibration_reader.cpp
examples/cmake/: ExecuteTestTimeout.cmake
examples/cpp/: CMakeLists.txt
examples/host_side/: basalt_dai_vio.cpp  basalt_dai_vio_slam.cpp  device_information.cpp  host_only_camera.cpp  host_only_image.cpp  host_pipeline.cpp  host_pipeline_opencv.cpp  host_pipeline_synced_node.cpp  opencv_support.cpp  queue_add_callback.cpp  rtabmap_rgbd.cpp  rtabmap_slam.cpp  rtabmap_stereo.cpp  rtabmap_vio.cpp
examples/mixed/: frame_sync.cpp  mono_depth_mobilenetssd.cpp  multidevice_example.cpp  multiple_devices.cpp  rgb_encoding_mobilenet.cpp  rgb_encoding_mono_mobilenet.cpp  rgb_encoding_mono_mobilenet_depth.cpp
examples/python/: CMakeLists.txt  README.md  find_version.py  install_requirements.py  run_examples.py  t
examples/src/: 01_rgb_preview.cpp  02_mono_preview.cpp  03_depth_preview.cpp  04_rgb_encoding.cpp  05_rgb_mono_encoding.cpp  06_rgb_full_resolution_saver.cpp  08_rgb_mobilenet.cpp  (+125 more)
shaders/: CMakeLists.txt  bin2h.cmake  bin_file_to_header.cmake  compileShader.cmake  rgbd2pointcloud.comp
tests/: CMakeLists.txt  Dockerfile  README.md  lsan.supp  run_tests.py  run_tests_entrypoint.sh
(+2469 files in other folders)
